feat: Optimizar título y agregar info de contacto en Footer
- Título optimizado: 'Collares y Anillos' (keywords específicas)
- Footer con teléfono, email y ubicación
- Links clickeables (tel: y mailto:)
- Mejor SEO y experiencia de usuario
- Información de contacto visible en todas las páginas

--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>AURÉA - Joyería de Lujo Colombia | Envío Gratis</title>
+    <title>AURÉA - Joyería de Lujo Colombia | Collares y Anillos</title>
     <meta
       name="title"
-      content="AURÉA - Joyería de Lujo Colombia | Envío Gratis"
+      content="AURÉA - Joyería de Lujo Colombia | Collares y Anillos"
     />
     <meta
       name="description"
