feat: Agregar verificación de Google Search Console
- Meta tag de verificación para Search Console
- Permite indexación en Google
- Guía completa en GOOGLE_SETUP.md
- Próximo paso: verificar en Search Console y enviar sitemap

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="c2LUJ0--Nq44U8sHPXcNIVMbKUNRJJcdvkpnQilpTAo" />
 
     <!-- Primary Meta Tags -->
     <title>AURÉA - Joyería de Lujo Colombia | Collares y Anillos</title>
