feat: Agregar Google Analytics 4
- Measurement ID: G-K3TZ8SW8PV
- Tracking de visitantes y comportamiento
- Datos disponibles en 24 horas
- Integración completa con Google Search Console

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,15 @@
     <!-- Google Search Console Verification -->
     <meta name="google-site-verification" content="c2LUJ0--Nq44U8sHPXcNIVMbKUNRJJcdvkpnQilpTAo" />
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K3TZ8SW8PV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K3TZ8SW8PV');
+    </script>
+
     <!-- Primary Meta Tags -->
     <title>AURÉA - Joyería de Lujo Colombia | Collares y Anillos</title>
     <meta
